kubernetes/apps/base/kafka-demo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-saga
  labels:
    app.kubernetes.io/name: kafka-saga
    app.kubernetes.io/part-of: kafka-demo
